[package]
name = "spectrometer_cli"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
ccd_lcamv06 = { path = "../ccd_lcamv06" }
atty = "0.2"
clap = { version = "3.2", features = ["derive"] }
futures = "0.3"
num-traits = "0.2"
simple-eyre = "0.3"
termcolor = "1.1"
tokio = { version = "1.23", features = ["full"] }
tokio-serial = "5.4"
tokio-util = "0.7.4"

[build-dependencies]
embed-resource = "1.7"
